# notsolocalfinance

./: .env.example  .gitignore  Dockerfile  LMSTUDIO_SETUP.md  README.md  ai_service.py  auth.py  docker-compose.yml  main.py  models.py  parsers.py  pyproject.toml  requirements.txt  skills-lock.json  test_transactions.csv  test_transactions2.csv  tools.py  vdb.py
static/: app.js  style.css
templates/: auth_success.html  index.html
